fix: white space in login page

--- a/src/pages/auth/styles.module.css
+++ b/src/pages/auth/styles.module.css
@@ -1,13 +1,17 @@
 /* src/components/Auth/styles.module.css */
+.full {
+  transform: translateY(20px);
+}
+
 .wrapper {
-  min-height: 70vh;
+  min-height: 100vh;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   background-image: url("/src/assets/imageBackground.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: center bottom;
   padding: 20px;
   position: relative;
 }
@@ -32,7 +36,7 @@
   box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
   overflow: hidden;
   border-radius: 20px;
-  margin: 50px auto;
+  margin: 0 auto;
   z-index: 1;
 }
 
@@ -79,7 +83,7 @@
   overflow: hidden;
   background-image: url("/./src/assets/imageBackground.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: center bottom;
   transition: transform 0.6s ease-in-out;
   z-index: 100;
 }
